# PedestrianTracking

./: .gitignore  CMakeLists.txt  README.md  config.cfg
data/detections/PETS09_S2_View_005/BSI/: frame_0000.det  frame_0001.det  frame_0002.det  frame_0003.det  frame_0004.det  frame_0005.det  frame_0006.det  frame_0007.det  frame_0008.det  frame_0009.det  frame_0010.det  frame_0011.det  frame_0012.det  frame_0013.det  frame_0014.det  frame_0015.det  frame_0016.det  frame_0017.det  frame_0018.det  frame_0019.det  frame_0020.det  frame_0021.det  frame_0022.det  frame_0023.det  frame_0024.det  frame_0025.det  frame_0026.det  frame_0027.det  frame_0028.det  frame_0029.det  frame_0030.det  frame_0031.det  frame_0032.det  frame_0033.det  frame_0034.det  frame_0035.det  frame_0036.det  frame_0037.det  frame_0038.det  frame_0039.det  (+752 more)
data/detections/PETS09_S2_View_005/yolo/: frame_0000.det  frame_0001.det  frame_0002.det  frame_0003.det  frame_0004.det  frame_0005.det  frame_0006.det  frame_0007.det  frame_0008.det  frame_0009.det  frame_0010.det  frame_0011.det  frame_0012.det  frame_0013.det  frame_0014.det  frame_0015.det  frame_0016.det  frame_0017.det  frame_0018.det  frame_0019.det  frame_0020.det  frame_0021.det  frame_0022.det  frame_0023.det  frame_0024.det  frame_0025.det  frame_0026.det  frame_0027.det  frame_0028.det  frame_0029.det  frame_0030.det  frame_0031.det  frame_0032.det  frame_0033.det  frame_0034.det  frame_0035.det  frame_0036.det  frame_0037.det  frame_0038.det  frame_0039.det  (+755 more)
data/detections/ktp/BSI/: 1339064317.986969085.det  1339064318.018950615.det  1339064318.088350147.det  1339064318.187893069.det  1339064318.222227840.det  1339064318.287828434.det  1339064318.320013479.det  1339064318.355791472.det  1339064318.388907230.det  1339064318.423611549.det  1339064318.487988444.det  1339064318.522891335.det  1339064318.556241122.det  1339064318.586997061.det  1339064318.622976358.det  1339064318.690487088.det  1339064318.726408083.det  1339064318.788096954.det  1339064318.823512824.det  1339064318.857222409.det  1339064318.886978287.det  1339064318.922904489.det  1339064318.955851719.det  1339064318.987253482.det  1339064319.029056109.det  1339064319.061540435.det  1339064319.087715714.det  1339064319.123908247.det  1339064319.157917328.det  1339064319.223789311.det  1339064319.257269270.det  1339064319.287243596.det  1339064319.357325154.det  1339064319.388447092.det  1339064319.426495846.det  1339064319.454984227.det  1339064319.486801612.det  1339064319.523858095.det  1339064319.591644868.det  1339064319.623050016.det  (+1615 more)
data/detections/ktp/yolo/: 1339064317.986969085.det  1339064318.018950615.det  1339064318.088350147.det  1339064318.187893069.det  1339064318.222227840.det  1339064318.256369803.det  1339064318.320013479.det  1339064318.355791472.det  1339064318.388907230.det  1339064318.423611549.det  1339064318.487988444.det  1339064318.522891335.det  1339064318.556241122.det  1339064318.586997061.det  1339064318.622976358.det  1339064318.690487088.det  1339064318.754906606.det  1339064318.823512824.det  1339064318.857222409.det  1339064318.886978287.det  1339064318.922904489.det  1339064318.955851719.det  1339064318.987253482.det  1339064319.029056109.det  1339064319.061540435.det  1339064319.087715714.det  1339064319.123908247.det  1339064319.157917328.det  1339064319.223789311.det  1339064319.257269270.det  1339064319.287243596.det  1339064319.326809811.det  1339064319.388447092.det  1339064319.426495846.det  1339064319.454984227.det  1339064319.486801612.det  1339064319.523858095.det  1339064319.591644868.det  1339064319.623050016.det  1339064319.654901058.det  (+1712 more)
data/inception/model/: output_labels.txt
data/yolo/data/: yolo.weights.url
src/: DetectorInterface.h  Properties.cpp  Properties.h  TrackerInterface.cpp  TrackerInterface.h  Utils.h  main.cpp
src/ConfigLoader/: ConfigFile.cpp
src/Detector/: IBackgroundSubtractor.cpp  IBackgroundSubtractor.h  InceptionClassifierInterface.cpp  InceptionClassifierInterface.h  YoloInterface.cpp  YoloInterface.h
src/Tracker/: Ctracker.cpp  Ctracker.h  Kalman.cpp  Kalman.h  LocalTracker.cpp  track.h
